Integrating ramulator2 within gem5

--- a/src/mem/SConscript
+++ b/src/mem/SConscript
@@ -129,6 +129,11 @@ if env['HAVE_DRAMSYS']:
     Source('dramsys_wrapper.cc')
     Source('dramsys.cc')
 
+if env['HAVE_RAMULATOR2']:
+  SimObject('Ramulator2.py', sim_objects=['Ramulator2'])
+  Source('ramulator2.cc')
+  DebugFlag("Ramulator2")
+
 SimObject('MemChecker.py', sim_objects=['MemChecker', 'MemCheckerMonitor'])
 Source('mem_checker.cc')
 Source('mem_checker_monitor.cc')
